Fixed spacing on landing page title to flow better

--- a/client/src/Styles/HomeScreenStyles.css
+++ b/client/src/Styles/HomeScreenStyles.css
@@ -14,7 +14,7 @@
     padding: 0;
     margin-bottom: 20px; 
     position: relative;
-    top: 90px;
+    top: 50px;
     text-align: start;
     max-width: fit-content;
   }
@@ -175,7 +175,7 @@
     margin: 0;
     padding: 0;
     position: relative;
-    top: 150px;
+    top: 110px;
     left: 50px;
     text-align: start;
     max-width: fit-content;
